--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,35 @@
 # Django Settings
 SECRET_KEY=your-secret-key-here-generate-a-secure-50-char-key
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
+ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 
 # Database Configuration
 # For development (SQLite) - leave empty or use:
 # DATABASE_URL=sqlite:///db.sqlite3
 # For PostgreSQL:
-DATABASE_URL=postgresql://username:password@localhost:5432/civicpulse_db
+DATABASE_URL=postgresql://civicpulse:civicpulse@localhost:5432/civicpulse_db
+# For Docker:
+# DATABASE_URL=postgresql://civicpulse:civicpulse@db:5432/civicpulse
+
+# Redis Configuration
+REDIS_URL=redis://localhost:6379/0
+# For Docker:
+# REDIS_URL=redis://redis:6379/0
+
+# Celery Configuration
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
 
 # Static and Media Files
 STATIC_ROOT=staticfiles
 MEDIA_ROOT=media
+
+# AWS S3 (for production static/media files)
+# AWS_ACCESS_KEY_ID=
+# AWS_SECRET_ACCESS_KEY=
+# AWS_STORAGE_BUCKET_NAME=
+# AWS_S3_REGION_NAME=us-east-1
+# AWS_S3_CUSTOM_DOMAIN=
 
 # Email Configuration (for development)
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
@@ -28,6 +46,28 @@ SECURE_SSL_REDIRECT=False
 SECURE_HSTS_SECONDS=0
 SECURE_HSTS_INCLUDE_SUBDOMAINS=False
 SECURE_HSTS_PRELOAD=False
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
+CSRF_TRUSTED_ORIGINS=http://localhost:3000,http://localhost:8000
 
-# Cache Configuration (for production)
-# REDIS_URL=redis://127.0.0.1:6379/1
+# Sentry (for error tracking)
+# SENTRY_DSN=
+
+# OAuth2 (optional)
+# GOOGLE_CLIENT_ID=
+# GOOGLE_CLIENT_SECRET=
+# GITHUB_CLIENT_ID=
+# GITHUB_CLIENT_SECRET=
+
+# Twilio (for SMS - optional)
+# TWILIO_ACCOUNT_SID=
+# TWILIO_AUTH_TOKEN=
+# TWILIO_PHONE_NUMBER=
+
+# Application specific
+SITE_NAME=CivicPulse
+SITE_URL=http://localhost:8000
+API_THROTTLE_RATE=1000/hour
+
+# Logging
+LOG_LEVEL=DEBUG
+DJANGO_LOG_LEVEL=INFO
