feat: add development environment setup and CI/CD pipeline
- Add Docker configuration (Dockerfile, docker-compose.yml)
- Setup GitHub Actions workflows for CI and deployment
- Configure code quality checks (ruff, mypy, pytest, bandit)
- Add comprehensive environment variable management
- Create development and GitHub secrets documentation
- Add pip-audit for security scanning

Closes #10

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ dev = [
     "django-debug-toolbar>=6.0.0",
     "django-extensions>=4.1",
     "mypy>=1.17.1",
+    "pip-audit>=2.9.0",
     "pre-commit>=4.3.0",
     "pytest>=8.4.1",
     "pytest-cov>=6.2.1",
