--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,20 @@
 name: Deploy
 
+# DISABLED: Deployment workflow is prepared but not active yet
+# To enable: uncomment the 'on' section below
+# on:
+#   push:
+#     branches: [ main ]
+#   workflow_dispatch:
+
+# Temporary: prevent this workflow from running
 on:
-  push:
-    branches: [ main ]
   workflow_dispatch:
+    inputs:
+      disabled:
+        description: 'This workflow is currently disabled'
+        required: false
+        default: 'true'
 
 env:
   PYTHON_VERSION: '3.12'
@@ -15,94 +26,89 @@ jobs:
     uses: ./.github/workflows/ci.yml
     secrets: inherit
   
-  deploy-staging:
-    name: Deploy to Staging
+  build-and-push:
+    name: Build and Push to GHCR
     needs: test
     runs-on: ubuntu-latest
-    environment: staging
-    if: github.ref == 'refs/heads/main'
+    permissions:
+      contents: read
+      packages: write
+    if: github.ref == 'refs/heads/main' && github.event.inputs.disabled != 'true'
     
     steps:
       - uses: actions/checkout@v4
       
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
-        with:
-          version: ${{ env.UV_VERSION }}
-      
-      - name: Build Docker image
-        run: |
-          docker build -t civicpulse-backend:${{ github.sha }} .
-      
-      - name: Log in to Container Registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ secrets.REGISTRY_URL }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Push Docker image
-        run: |
-          docker tag civicpulse-backend:${{ github.sha }} ${{ secrets.REGISTRY_URL }}/civicpulse-backend:${{ github.sha }}
-          docker tag civicpulse-backend:${{ github.sha }} ${{ secrets.REGISTRY_URL }}/civicpulse-backend:staging
-          docker push ${{ secrets.REGISTRY_URL }}/civicpulse-backend:${{ github.sha }}
-          docker push ${{ secrets.REGISTRY_URL }}/civicpulse-backend:staging
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository }}:${{ github.sha }}
+            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:staging
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+  
+  deploy-staging:
+    name: Deploy to Staging
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    environment: staging
+    if: github.ref == 'refs/heads/main' && github.event.inputs.disabled != 'true'
+    
+    steps:
+      - uses: actions/checkout@v4
       
       - name: Deploy to staging
         run: |
           echo "Deploy to staging environment"
-          # Add actual deployment commands here
-          # This could be:
-          # - SSH to server and pull new image
-          # - Trigger webhook
-          # - Use cloud provider CLI (AWS, GCP, Azure)
-          # - Kubernetes deployment
-          # - Docker Swarm update
-          # Example placeholder:
-          # ssh ${{ secrets.STAGING_HOST }} 'docker pull ${{ secrets.REGISTRY_URL }}/civicpulse-backend:staging && docker-compose up -d'
+          # Deployment commands would go here when ready
+          # Example with GHCR:
+          # ssh ${{ secrets.STAGING_HOST }} 'docker pull ghcr.io/${{ github.repository }}:staging && docker-compose up -d'
   
   deploy-production:
     name: Deploy to Production
     needs: deploy-staging
     runs-on: ubuntu-latest
     environment: production
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && github.event.inputs.disabled != 'true'
     
     steps:
       - uses: actions/checkout@v4
       
-      - name: Log in to Container Registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ secrets.REGISTRY_URL }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Promote staging to production
         run: |
-          docker pull ${{ secrets.REGISTRY_URL }}/civicpulse-backend:${{ github.sha }}
-          docker tag ${{ secrets.REGISTRY_URL }}/civicpulse-backend:${{ github.sha }} ${{ secrets.REGISTRY_URL }}/civicpulse-backend:production
-          docker push ${{ secrets.REGISTRY_URL }}/civicpulse-backend:production
+          docker pull ghcr.io/${{ github.repository }}:staging
+          docker tag ghcr.io/${{ github.repository }}:staging ghcr.io/${{ github.repository }}:production
+          docker push ghcr.io/${{ github.repository }}:production
       
       - name: Deploy to production
         run: |
           echo "Deploy to production environment"
-          # Add actual production deployment commands here
-          # This should include:
-          # - Database migrations
-          # - Static file collection
-          # - Service restart
-          # - Health checks
-          # Example placeholder:
-          # ssh ${{ secrets.PRODUCTION_HOST }} 'docker pull ${{ secrets.REGISTRY_URL }}/civicpulse-backend:production && docker-compose up -d'
+          # Deployment commands would go here when ready
+          # Example with GHCR:
+          # ssh ${{ secrets.PRODUCTION_HOST }} 'docker pull ghcr.io/${{ github.repository }}:production && docker-compose up -d'
       
       - name: Run smoke tests
         run: |
           echo "Running production smoke tests"
-          # Add smoke test commands
+          # Add smoke test commands when deployment is active
           # curl -f ${{ secrets.PRODUCTION_URL }}/health || exit 1
