fix: resolve CI failures in PR #35
- Add SECRET_KEY environment variable to mypy type check job
- Format all Python files with Ruff to pass linting checks
- Create static/ directory with .gitkeep to resolve Django warnings
- Remove type annotations causing mypy conflicts in development settings

These changes fix all three failing CI checks:
1. Type Check job now has required SECRET_KEY
2. Lint & Format Check passes with properly formatted files
3. Test job no longer warns about missing static directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,8 @@ jobs:
           uv sync --frozen
       
       - name: Run mypy
+        env:
+          SECRET_KEY: dummy-secret-key-for-ci
         run: |
           uv run mypy civicpulse/
   
