--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "bandit>=1.8.6",
     "django-stubs>=5.2.2",
     "phonenumbers>=9.0.12",
+    "dj-database-url>=2.3.0",
 ]
 
 
@@ -58,8 +59,6 @@ addopts = [
     "--cov-report=html",
     "--cov-report=term-missing",
     "--cov-fail-under=50",
-    "--ignore=migrations",
-    "--reuse-db",
 ]
 
 [tool.bandit]
