fix: enhance Docker runtime environment with uv support
- Add uv runtime support in Dockerfile for better dependency management
- Update docker-compose commands to properly activate virtual environment
- Ensure Python dependencies are accessible in runtime containers

Completes Docker environment setup for issue #15

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: sh -c "export VIRTUAL_ENV=/opt/venv && export PATH=/opt/venv/bin:$PATH && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
       - /app/.venv  # Exclude venv from being overwritten
