--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "django>=5.2.5",
+    "django==5.2.8",
     "django-environ>=0.12.0",
     "psycopg2-binary>=2.9.10",
     "loguru>=0.7.2",
@@ -18,6 +18,7 @@ dependencies = [
     "dj-database-url>=2.3.0",
     "faker>=37.5.3",
     "django-ratelimit>=4.1.0",
+    "pip==25.3",
 ]
 
 
